experimental/report/testdata/i18n.yaml.simple.txt
error: foo.proto:5:9: emoji, CJK, bidierror: emoji, CJK, bidi
  --> foo.proto:5:9
   |
 5 | message ๐<U+200D>โฌ {
   |         ^^^^^^^^^^^^
 6 |   string ้ป็ซ = 1;
   |          ---- note: some surfaces render CJK as sub-two-column
  ::: bar.proto:1:9
   |
 1 | import "ืืชืื ืฉืืืจ.proto";
   |         --------------- bidi works if it's quoted, at least

error: foo.proto:7:10: bidi (Arabic, Hebrew, Farsi, etc) is broken in some contextserror: bidi (Arabic, Hebrew, Farsi, etc) is broken in some contexts
  --> foo.proto:7:10
   |
 7 |   string ุงููุทุฉ ุงูุณูุฏุงุก = 2;
   |          ^^^^^^^^

